--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /D3TestCases/D3TestCases/node_modules
+/D3TestCases/D3TestCases/obj/Release
